fixed footer spacing

--- a/ArtLab.css
+++ b/ArtLab.css
@@ -226,7 +226,7 @@ html{
     display:flex;
     justify-content: center;
     column-gap: 250px;
-    margin-top: 434px;
+    margin-top: 140px;
   }
   
   .footerModal{
@@ -380,8 +380,16 @@ html{
       height:670px;
     }
 
-   
-  
+    html{
+      height: 415vh;
+      width:100%
+    }
+    
+    body{
+      background-color: #1c1c2c;
+      height: 415vh;
+      margin:0px;
+    }
 
     #filter{
       background: rgba(10, 10, 10, 0.55);
@@ -389,13 +397,13 @@ html{
       top: 0;
       left: 0;
       width:100%;
-      height: 429vh;
+      height: 415vh;
       z-index: -2;
     }
     
     #bg-lines{
       opacity: .10;
-      height: 429vh;
+      height: 415vh;
       width:100%;
       position: absolute;
       z-index:-5;
