--- a/styles.css
+++ b/styles.css
@@ -130,13 +130,18 @@ i{
 }
 
 .AboutMeBtn{
-  z-index:900;
+  z-index:990;
   font-size: 20px;
   font-weight: bold;
   display: flex;
   justify-content: center;
   margin-bottom: 100px;
 }
+
+#ViewMore{
+  z-index: 900;
+}
+
 
 .paragraph{
   margin-top: 45px;
